# lume

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build-wasm.sh  flake.nix  parser.md  spec.md
examples/: app.lume  geometry.lume  grader.lume  lists.lume  math.lume  maybe.lume  row_poly.lume  shapes.lume
lume/: Cargo.toml
lume-core/: Cargo.toml
lume-core/src/: ast.rs  builtin.rs  bundle.rs  error.rs  fixity.rs  fmt.rs  ir.rs  lexer.rs  lib.rs  loader.rs  lower.rs  parser.rs  pipeline.rs  pretty.rs
lume-lsp/: Cargo.toml
lume-lsp/src/: analysis.rs  completion.rs  hover.rs  lib.rs  main.rs  semantic_tokens.rs
lume-repl/: Cargo.toml
lume-repl/src/: compile.rs  eval.rs  helper.rs  lib.rs
lume-wasm/: Cargo.toml  codemirror.ts
lume-wasm/src/: lib.rs
lume/src/: ast.rs  bundle.rs  desugar.rs  error.rs  fmt.rs  lexer.rs  lib.rs  loader.rs  main.rs  parser.rs  pretty.rs
lume/src/codegen/: js.rs  lua.rs
lume/src/types/: error.rs  infer.rs  mod.rs
src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/codegen/: js.rs  lua.rs  mod.rs
src/types/: error.rs  infer.rs  mod.rs
std/: complex.lume  core.lume  list.lume  map.lume  math.lume  maybe.lume  ops.lume  prelude.lume  result.lume  text.lume
tests/: conditionals.lume  list_operations.lume  list_patterns.lume  maybe_type.lume  mod_diamond_base.lume  mod_diamond_left.lume  mod_dup_left.lume  mod_dup_trait.lume  mod_shapes.lume  module_adt_constructors.lume  module_duplicate_impl.lume  module_reexport.lume  module_trait_import.lume  repl.toml  run.py  test.toml  tests.toml  trait_applied_type.lume  trait_constrained_fn.lume  trait_constrained_nested.lume  trait_extra_type_var.lume  trait_impl_annotation.lume  trait_impl_closed_record.lume  trait_missing_impl_at_callsite.lume  trait_multi_method.lume  trait_partial_impl.lume  trait_partial_param_mismatch.lume
tests/fmt/: basic.lume  expressions.lume  imports.lume  records.lume  traits.lume  (+1 more)
(+107 files in other folders)
