[package]
name = "lume-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lume-lsp"
path = "src/main.rs"

[lib]
name = "lume_lsp"
path = "src/lib.rs"

[dependencies]
lume-core = { path = "../lume-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
tracing-subscriber = "0.3"
