[package]
name = "lume"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lume"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
lume-core = { path = "../lume-core" }
lume-lsp = { path = "../lume-lsp" }
lume-repl = { path = "../lume-repl" }
tokio = { version = "1", features = ["full"] }
